Fix scrollbars

--- a/css/style.scss
+++ b/css/style.scss
@@ -297,7 +297,8 @@ h4 {
   position: fixed;
   height: 100vh;
   width: 100vw;
-  overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: scroll;
   top: 0;
   left: 0;
   z-index: 88;
@@ -5742,7 +5743,14 @@ $hamburgerwidth: 26px;
   }
 }
 
+.mobile-nav-fs {
+  display: none;
+}
+
 @media (max-width: 768px) {
+  .mobile-nav-fs {
+    display: initial;
+  }
   form .gf_page_steps {
     display: block;
   }
